--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
       - name: Setup Java JDK
         uses: actions/setup-java@v4.7.0
+        with:
+          distribution: 'microsoft'
+          java-version: ${{ matrix.java }}
       - name: setup jdk ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
