--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,9 @@ jobs:
         uses: actions/checkout@v4
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v1
+      - name: make gradle wrapper executable
+        if: runner.os != 'Windows'
+        run: chmod +x ./gradlew
       - name: Setup Java JDK
         uses: actions/setup-java@v4.7.0
         with:
