--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,15 @@
 name: SimpleCam
-version: 1.0
-main: com.maijsoft.simplecam.Main
+version: 1.1
+main: com.maijsoft.simplecam.CameraPlugin
 api-version: 1.21
 description: A camera movement plugin for Minecraft
 commands:
   cm:
-    description: Camera plugin commands
-    usage: /cm <subcommand>
+    description: 카메라 시스템 명령어
+    usage: /cm <subcommand> ...
     aliases: [camera]
+    permission: camera.use
+permissions:
+  camera.use:
+    description: 카메라 명령어 사용 권한
+    default: op
